--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap');
+
 @layer theme, base, components, utilities;
 
 @import "tailwindcss/theme.css" layer(theme);
